syntax = "proto3";

package kritor;

option csharp_namespace = "Kritor";
option java_multiple_files = true;
option java_package = "io.kritor";

import "kritor/comm_request.proto";

service ReverseService {
  rpc ReverseStream(stream Request) returns (stream Response) {}
}